Evolution 3.0.1 : - correction style contrasté

--- a/templates/css/custom.css
+++ b/templates/css/custom.css
@@ -54,7 +54,7 @@ button,button *{cursor:url(###EMBEDDED_URL###/design/cursors/pointer_cursor_###C
 .cdlFormExitFromCdl input{cursor:url(###EMBEDDED_URL###/design/cursors/pointer_cursor_###CURSOR_SIZE###.cur),pointer}
 .cdlSizes li a,.cdlSizes li a *{color:####FONT_COLOR###}
 .cdlSizes .choiceSelected a,.cdlSizes li a:hover,.cdlSizes li a:focus{border-color:####FONT_COLOR###}
-.cdlContraste,.cdlContraste *{background-color:####FONT_COLOR###;color:####BACKGROUND_COLOR###;border-color:####BACKGROUND_COLOR###}
+.cdlContraste,.cdlContraste *{background-color:####FONT_COLOR###;color:####BACKGROUND_COLOR###;border-color:####BACKGROUND_COLOR### !important}
 .cdlContraste .cdlInversedColor{background-color:####BACKGROUND_COLOR### !important;color:####FONT_COLOR### !important}
 .cdlContraste .cdlInversedColor *{background-color:####BACKGROUND_COLOR### !important;color:####FONT_COLOR### !important;border-color:####FONT_COLOR### !important}
 .cdlFormExitFromCdl input[type="submit"]{color:####LINK_COLOR###}
